cast to numeric to fix plots

--- a/tutorials/R/AOP/Hyperspectral/Field-Spectra/explore_field_spectra.Rmd
+++ b/tutorials/R/AOP/Hyperspectral/Field-Spectra/explore_field_spectra.Rmd
@@ -117,14 +117,14 @@ This `reflectanceCondition` describes what exactly is being measured. As stated 
 
 > "Spectral reflectance of both the front and back of the sample is measured against a reflective white spectralon reference panel. A black spectralon reference is then measured, followed by spectral transmittance measurements of the front and back of the sample. Reference measurements of the white reference are taken between each leaf measurement."
 
-When linking with NEON's airborne spectral dataset (DP3.30006.001), the `top of foliage (sunward) on black reference` is what we want to use. For this lesson, we will just focus on this reflectance condition. Let's take a look at the spectra for the single csv we read in:
+When linking with NEON's airborne spectral dataset (DP3.30006.001), the `top of foliage (sunward) on black reference` is the condition that we want to use. For this lesson, we will just focus on this reflectance condition. Let's take a look at the spectra for the single csv we read in. Note that you'll need to cast the wavelength and reflectance data to "numeric" data type, using `as.numeric`.
 
 ``` {r plot-reflectance-conditions, fig.align="center", fig.width = 12, fig.height = 4.5}
 refl_conditions_plot <- ggplot(FSP_RMNP_20200706_2043,             
-               aes(x = wavelength, 
-                   y = reflectance, 
+               aes(x = as.numeric(wavelength), 
+                   y = as.numeric(reflectance), 
                    color = reflectanceCondition)) + geom_line() 
-print(refl_conditions_plot + ggtitle("FSP_RMNP_20200706_2043 - all reflectance conditions"))
+print(refl_conditions_plot + ggtitle("FSP_RMNP_20200706_2043 - all reflectance conditions") + xlab("wavelength (nm)") + ylab("reflectance"))
 ```
 
 And then subset just to the top of foliage on black reference, to plot the reflectance:
@@ -133,12 +133,13 @@ And then subset just to the top of foliage on black reference, to plot the refle
 FSP_RMNP_20200706_2043_REFL <- FSP_RMNP_20200706_2043[FSP_RMNP_20200706_2043$reflectanceCondition == "top of foliage (sunward) on black reference", c("reflectance","wavelength")]
 
 spectra_plot <- ggplot(FSP_RMNP_20200706_2043_REFL,
-                       aes(x = wavelength, 
-                           y = reflectance)) + geom_line() 
-print(spectra_plot + ggtitle("FSP_RMNP_20200706_2043_REFL - Top of Foliage on Black Reference"))
+                       aes(x = as.numeric(wavelength), 
+                           y = as.numeric(reflectance))) + geom_line() 
+print(spectra_plot + ggtitle("FSP_RMNP_20200706_2043_REFL - Top of Foliage on Black Reference") + xlab("wavelength (nm)") + ylab("reflectance"))
 ```
 
 So ... how can we read the spectral data in for all of the samples collected at RMNP? The code chunk below loops through all the spectral samples and creates a new data frame comprised of the taxonID + date of the fspID, and the reflectance values only of the top of the leaf on the black reference. 
+
 ``` {r create-refl-df}
 spectra_list <- list()
 for (i in 1:nrow(spectra_merge)) {
@@ -151,7 +152,8 @@ for (i in 1:nrow(spectra_merge)) {
   spectra_list[[i]] <- refl
 }
 # get the wavelength values corresponding to the subset we selected for each of the spectra
-wavelengths <- as.numeric(refl_data[which(refl_data$reflectanceCondition == "top of foliage (sunward) on black reference"), c("wavelength")])
+wavelengths <- refl_data[which(refl_data$reflectanceCondition == "top of foliage (sunward) on black reference"), c("wavelength")]
+wavelengths <- as.numeric(wavelengths)
 spectra_df <- as.data.frame(do.call(cbind, spectra_list)) # make a new dataframe from the spectra_list
 # assign the taxonID + fspID to the column names to make unique column names
 taxonIDs <- paste0(spectra_merge$taxonID,substr(spectra_merge$spectralSampleID,9,22))
