updates to latest version of h5py and gdal, clean-up, download data from url directly

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5/Intro_NEON_AOP_HDF5_Reflectance_Tiles_py.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5/Intro_NEON_AOP_HDF5_Reflectance_Tiles_py.ipynb
@@ -6,17 +6,17 @@
    "source": [
     "---\n",
     "syncID: 61ad1fc43ddd45b49cad1bca48656bbe\n",
-    "title: \"NEON AOP Hyperspectral Data in HDF5 format with Python - Tiled Data\" \n",
-    "description: \"Learn how to read NEON AOP hyperspectral flightline data using Python and develop skills to manipulate and visualize spectral data.\"\n",
+    "title: \"NEON AOP Hyperspectral Data in HDF5 format with Python\" \n",
+    "description: \"Learn how to read NEON AOP L3 reflectance h5 data in Python and visualize spectral data.\"\n",
     "dateCreated: 2018-07-04 \n",
     "authors: Bridget Hass\n",
     "contributors: Donal O'Leary\n",
     "estimatedTime: 1 hour\n",
-    "packagesLibraries: numpy, h5py, gdal, matplotlib.pyplot\n",
-    "topics: hyperspectral-remote-sensing, HDF5, remote-sensing\n",
+    "packagesLibraries: numpy, h5py, gdal, matplotlib, scikit-image, ipywidgets\n",
+    "topics: hyperspectral-remote-sensing, HDF5, remote-sensing, reflectance\n",
     "languagesTool: python\n",
-    "dataProduct: NEON.DP3.30006, NEON.DP3.30008\n",
-    "code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/Python/Hyperspectral/intro-hyperspectral/Intro_NEON_AOP_HDF5_Reflectance_Tiles_py/Intro_NEON_AOP_HDF5_Reflectance_Tiles_py.ipynb\n",
+    "dataProduct: DP3.30006.001,\n",
+    "code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5/Intro_NEON_AOP_HDF5_Reflectance_Tiles_py.ipynb\n",
     "tutorialSeries: intro-hsi-py-series\n",
     "urlTitle: neon-aop-hdf5-tile-py\n",
     "---\n"
@@ -26,31 +26,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this introductory tutorial, we discuss how to read NEON AOP hyperspectral flightline\n",
-    "data using Python. We develop and practice skills and use several tools to manipulate and \n",
-    "visualize the spectral data. By the end of this tutorial, you will become \n",
-    "familiar with the Python syntax.\n",
+    "In this introductory tutorial, we demonstrate how to read NEON AOP hyperspectral reflectance (Level 3, tiled) data in Python. This starts with the fundamental steps of reading in and exploring the HDF5 (h5) format that the reflectance data is delivered in. Then you will develop and practice skills to explore and visualize the spectral data. \n",
     "\n",
-    "If you are interested in learning how to do this for flightline NEON AOP hyperspectral data, \n",
-    "please see <a href=\"/neon-aop-hdf5-py\" target=\"_blank\"> NEON AOP Hyperspectral Data in HDF5 format with Python - Flightlines</a>.\n",
-    "\n",
-    "\n",
+    "<div id=\"ds-objectives\" markdown=\"1\">\n",
+    "    \n",
     "### Learning Objectives\n",
     "\n",
     "After completing this tutorial, you will be able to:\n",
     "\n",
-    "* Import and use Python packages `numpy, pandas, matplotlib, h5py, and gdal`.\n",
-    "* Use the package `h5py` and the `visititems` functionality to read an HDF5 file \n",
-    "and view data attributes.\n",
-    "* Read the data ignore value and scaling factor and apply these values to produce \n",
-    "a cleaned reflectance array.\n",
-    "* Extract and plot a single band of reflectance data\n",
-    "* Plot a histogram of reflectance values to visualize the range and distribution \n",
-    "of values.\n",
-    "* Subset an hdf5 reflectance file from the full flightline to a smaller region \n",
-    "of interest (if you complete the optional extension). \n",
-    "* Apply a histogram stretch and adaptive equalization to improve the contrast \n",
-    "of an image (if you complete the optional extension) . \n",
+    "* Use the package `h5py` and the `visititems` method to read a reflectance HDF5 file and view data attributes.\n",
+    "* Read the data ignore value and scaling factor and apply these values to produce a \"cleaned\" reflectance array.\n",
+    "* Plot a histogram of reflectance values to visualize the range and distribution of values.\n",
+    "* Extract and plot a single band of reflectance data.\n",
+    "* Apply a histogram stretch and adaptive equalization to improve the contrast of an image. \n",
     "\n",
     "\n",
     "### Install Python Packages\n",
@@ -64,26 +52,18 @@
     "\n",
     "### Download Data\n",
     "\n",
-    "To complete this tutorial, you will use data available from the NEON 2017 Data\n",
-    "Institute.\n",
+    "To complete this tutorial, you will download and read in surface directional reflectance data collected at the NEON <a href=\"https://www.neonscience.org/field-sites/serc\" target=\"_blank\">Smithsonian Environmental Research Center (SERC)</a> site in Maryland. This data is downloaded in the first part of the tutorial, using a function that will download data from the NEON data portal using the Python requests package.\n",
     "\n",
-    "This tutorial uses the following files:\n",
+    "### Additional Resources\n",
+    "More details about the surface directional reflectance data product can be found on the data product page, linked below.\n",
+    "- <a href=\"https://data.neonscience.org/data-products/DP3.30006.001\" target=\"_blank\">Spectrometer orthorectified surface directional reflectance - mosaic</a>\n",
+    "\r",
+    "In addition, \n",
+    "NEON'S Airborne Observation Platform provides Algorithm Theoretical Basis Documents (ATBDs) for all of their data products. Please refer to the ATBDs below for a more in-depth understanding ofthe reflectance datad.\r",
+    "- <a href=\"https://data.neonscience.org/api/v0/documents/NEON.DOC.001288vB?inline=true\" target=\"_blank\">NEON Imaging Spectrometer Radiance to Reflectance ATBD</a>\n",
+    "- <a href=\"https://data.neonscience.org/api/v0/documents/NEON.DOC.004365vB?inline=true\" target=\"_blank\">Spectrometer Mosaic ATBD</a>\n",
     "\n",
-    "<ul>\n",
-    "    <li> <a href=\"https://www.neonscience.org/sites/default/files/neon_aop_spectral_python_functions_tiled_data.zip\">neon_aop_spectral_python_functions_tiled_data.zip (10 KB)</a> <- Click to Download</li>\n",
-    "    <li><a href=\"https://ndownloader.figshare.com/files/25752665\" target=\"_blank\">NEON_D02_SERC_DP3_368000_4306000_reflectance.h5 (618 MB)</a> <- Click to Download</li>\n",
-    "</ul>\n",
-    "\n",
-    "<a href=\"https://ndownloader.figshare.com/files/25752665\" class=\"link--button link--arrow\">\n",
-    "Download Dataset</a>\n",
-    "\n",
-    "The LiDAR and imagery data used to create this raster teaching data subset \n",
-    "were collected over the \n",
-    "<a href=\"http://www.neonscience.org/\" target=\"_blank\"> National Ecological Observatory Network's</a> \n",
-    "<a href=\"http://www.neonscience.org/science-design/field-sites/\" target=\"_blank\" >field sites</a>\n",
-    "and processed at NEON headquarters.\n",
-    "The entire dataset can be accessed on the \n",
-    "<a href=\"http://data.neonscience.org\" target=\"_blank\"> NEON data portal</a>.\n"
+    "</div>\n"
    ]
   },
   {
@@ -117,9 +97,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import requests\n",
     "import numpy as np\n",
     "import h5py\n",
-    "import gdal, osr, os\n",
+    "from osgeo import gdal\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -127,7 +109,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, set display preferences so that plots are inline (meaning any images you output from your code will show up below the cell in the notebook) and turn off plot warnings:"
+    "## Read in the datasets\n",
+    "To start, we will download the NEON surface reflectance data (DP3.30006.001) which are provided in hdf5 (.h5) format. Use the `download_url` function below to download the data directly from the cloud storage location."
    ]
   },
   {
@@ -136,47 +119,56 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "# function to download data stored on the internet in a public url to a local file\n",
+    "def download_url(url,download_dir):\n",
+    "    if not os.path.isdir(download_dir):\n",
+    "        os.makedirs(download_dir)\n",
+    "    filename = url.split('/')[-1]\n",
+    "    r = requests.get(url, allow_redirects=True)\n",
+    "    file_object = open(os.path.join(download_dir,filename),'wb')\n",
+    "    file_object.write(r.content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define the urls for downloading the reflectance tiles\n",
+    "h5_url = \"https://storage.googleapis.com/neon-aop-products/2021/FullSite/D02/2021_SERC_5/L3/Spectrometer/Reflectance/NEON_D02_SERC_DP3_368000_4306000_reflectance.h5\"\n",
+    "\n",
+    "# download the h5 data using the download_url function\n",
+    "download_url(h5_url,'.\\data')\n",
+    "\n",
+    "# display the contents in the ./data folder to confirm the download completed\n",
+    "os.listdir('./data')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Read in hdf5\n",
+    "## Read in hdf5 file\n",
     "\n",
     "```f = h5py.File('file.h5','r')``` reads in an h5 file to the variable f. \n",
     "\n",
     "### Using the help\n",
     "We will be using a number of built-in and user-defined functions and methods throughout the tutorial. If you are uncertain what a certain function does, or how to call it, you can type `help()` or type a \n",
-    "`?` at the end of the function or method and run the cell (either select Cell > Run Cells or Shift Enter with your cursor in the cell you want to run). The `?` will pop up a window at the bottom of the notebook displaying the function's `docstrings`, which includes information about the function and usage. We encourage you to use `help` and `?` throughout the tutorial as you come across functions you are unfamiliar with. Let's try this out with `h5py.File`:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "help(h5py)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "h5py.File?"
+    "`?` at the end of the function or method and run the cell (either select Cell > Run Cells or Shift Enter with your cursor in the cell you want to run). The `?` will pop up a window at the bottom of the notebook displaying the function's `docstrings`, which includes information about the function and usage. We encourage you to use `help` and `?` throughout the tutorial as you come across functions you are unfamiliar with. Try out these commands:\n",
+    "\n",
+    "`help(h5py)`\n",
+    "\n",
+    "or \n",
+    "\n",
+    "`h5py.File?`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have an idea of how to use `h5py` to read in an h5 file, let's try it out. Note that if the h5 file is stored in a different directory than where you are running your notebook, you need to include the path (either relative or absolute) to the directory where that data file is stored. Use `os.path.join` to create the full path of the file. "
+    "Now that we have an idea of how to use `h5py` to read in an h5 file, let's use this to explore the hyperspectral reflectance data. Note that if the h5 file is stored in a different directory than where you are running your notebook, you need to include the path (either relative or absolute) to the directory where that data file is stored. Use `os.path.join` to create the full path of the file. "
    ]
   },
   {
@@ -185,8 +177,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Note that you will need to update this filepath for your local machine\n",
-    "f = h5py.File('/Users/olearyd/Git/data/NEON_D02_SERC_DP3_368000_4306000_reflectance.h5','r')"
+    "# Note that you may need to update this filepath for your local machine\n",
+    "f = h5py.File('./data/NEON_D02_SERC_DP3_368000_4306000_reflectance.h5','r')"
    ]
   },
   {
@@ -237,13 +229,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#to see what the visititems methods does, type ? at the end:\n",
-    "f.visititems?"
+    "Data Tip: To see what the visititems method (or any method) does, type ? at the end, eg.\n",
+    "`f.visititems?`"
    ]
   },
   {
@@ -369,15 +359,15 @@
    "outputs": [],
    "source": [
     "#show the band widths between the first 2 bands and last 2 bands \n",
-    "print('band width between first 2 bands =',(wavelengths.value[1]-wavelengths.value[0]),'nm')\n",
-    "print('band width between last 2 bands =',(wavelengths.value[-1]-wavelengths.value[-2]),'nm')"
+    "print('band width between first 2 bands =',(wavelengths[1]-wavelengths[0]),'nm')\n",
+    "print('band width between last 2 bands =',(wavelengths[-1]-wavelengths[-2]),'nm')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The center wavelengths recorded in this hyperspectral cube range from `383.66 - 2511.94 nm`, and each band covers a range of ~`5 nm`. Now let's extract spatial information, which is stored under `SERC/Reflectance/Metadata/Coordinate_System/Map_Info`:"
+    "The center wavelengths recorded in this hyperspectral cube range from 383.88 - 2512.18 nm, and each band covers a range of ~5 nm. Now let's extract spatial information, which is stored under `SERC/Reflectance/Metadata/Coordinate_System/Map_Info`:"
    ]
   },
   {
@@ -387,7 +377,16 @@
    "outputs": [],
    "source": [
     "serc_mapInfo = serc_refl['Metadata']['Coordinate_System']['Map_Info']\n",
-    "print('SERC Map Info:',serc_mapInfo.value)"
+    "print('SERC Map Info:',serc_mapInfo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "serc_mapInfo[()]"
    ]
   },
   {
@@ -406,7 +405,11 @@
     "- `N` - UTM hemisphere (North for all NEON sites)\n",
     "- `WGS-84` - reference ellipoid\n",
     "\n",
-    "The letter `b` that appears before UTM signifies that the variable-length string data is stored in **b**inary format when it is written to the hdf5 file. Don't worry about it for now, as we will convert the numerical data we need into floating point numbers. For more information on hdf5 strings read the <a href=\"http://docs.h5py.org/en/latest/strings.html\" target=\"_blank\">h5py documentation</a>. \n",
+    "Note that the letter `b` that appears before UTM signifies that the variable-length string data is stored in **b**inary format when it is written to the hdf5 file. Don't worry about it for now, as we will convert the numerical data we need into floating point numbers. For more information on hdf5 strings read the <a href=\"http://docs.h5py.org/en/latest/strings.html\" target=\"_blank\">h5py documentation</a>. \n",
+    "\n",
+    "You can display this in as a string as follows:\n",
+    "\n",
+    "`serc_mapInfo[()].decode(\"utf-8\")`\n",
     "\n",
     "Let's extract relevant information from the `Map_Info` metadata to define the spatial extent of this dataset. To do this, we can use the `split` method to break up this string into separate values:"
    ]
@@ -418,10 +421,7 @@
    "outputs": [],
    "source": [
     "#First convert mapInfo to a string\n",
-    "mapInfo_string = str(serc_mapInfo.value) #convert to string\n",
-    "\n",
-    "#see what the split method does\n",
-    "mapInfo_string.split?"
+    "mapInfo_string = serc_mapInfo[()].decode(\"utf-8\") # read in as string"
    ]
   },
   {
@@ -472,7 +472,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can define the spatial exten as the tuple `(xMin, xMax, yMin, yMax)`. This is the format required for applying the spatial extent when plotting with `matplotlib.pyplot`."
+    "Now we can define the spatial extent as the tuple `(xMin, xMax, yMin, yMax)`. This is the format required for applying the spatial extent when plotting with `matplotlib.pyplot`."
    ]
   },
   {
@@ -627,14 +627,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Extension: Basic Image Processing -- Contrast Stretch & Histogram Equalization \n",
+    "## Optional Exercise: Image Processing -- Contrast Stretch & Histogram Equalization \n",
     "\n",
-    "We can also try out some basic image processing to better visualize the \n",
-    "reflectance data using the `ski-image` package. \n",
+    "We can also try out some basic image processing to better visualize the reflectance data using the `scikit-image` package. \n",
     "\n",
-    "Histogram equalization is a method in image processing of contrast adjustment \n",
-    "using the image's histogram. Stretching the histogram can improve the contrast \n",
-    "of a displayed image, as we will show how to do below. \n",
+    "Histogram equalization is a method in image processing of contrast adjustment using the image's histogram. Stretching the histogram can improve the contrast of a displayed image, as we will show how to do below. \n",
     "\n",
     " <figure>\n",
     "\t<a href=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/hyperspectral-general/histogram_equalization.png\">\n",
@@ -647,10 +644,10 @@
     "</figure>\n",
     "\n",
     "\n",
-    "*The following tutorial section is adapted from skikit-image's tutorial\n",
+    "*The following tutorial section is adapted from scikit-image's tutorial\n",
     "<a href=\"http://scikit-image.org/docs/stable/auto_examples/color_exposure/plot_equalize.html#sphx-glr-auto-examples-color-exposure-plot-equalize-py\" target=\"_blank\"> Histogram Equalization</a>.*\n",
     "\n",
-    "Below we demonstrate a widget to interactively display different linear contrast stretches:"
+    "Below we demonstrate a widget to interactively explore different linear contrast stretches:"
    ]
   },
   {
@@ -679,15 +676,15 @@
     "    ax.ticklabel_format(useOffset=False, style='plain') #do not use scientific notation #\n",
     "    rotatexlabels = plt.setp(ax.get_xticklabels(),rotation=90) #rotate x tick labels 90 degree\n",
     "    \n",
-    "interact(linearStretch,percent=(0,50,1))"
+    "interact(linearStretch,percent=(0,50,1));"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py37",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "py37"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -699,7 +696,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.9.18"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
@@ -952,5 +949,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
