update script and url name in header

--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5/intro-l3-refl-h5.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5/intro-l3-refl-h5.ipynb
@@ -16,9 +16,9 @@
     "topics: hyperspectral-remote-sensing, HDF5, remote-sensing, reflectance\n",
     "languagesTool: python\n",
     "dataProduct: DP3.30006.001,\n",
-    "code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5/Intro_NEON_AOP_HDF5_Reflectance_Tiles_py.ipynb\n",
+    "code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5/intro-l3-refl-h5.ipynb\n",
     "tutorialSeries: intro-hsi-py-series\n",
-    "urlTitle: neon-aop-hdf5-tile-py\n",
+    "urlTitle: neon-refl-h5-py\n",
     "---\n"
    ]
   },
