--- a/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5/intro-l3-refl-h5.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/intro-hyperspectral/intro-refl-h5/intro-l3-refl-h5.ipynb
@@ -633,19 +633,8 @@
     "\n",
     "Histogram equalization is a method in image processing of contrast adjustment using the image's histogram. Stretching the histogram can improve the contrast of a displayed image, as we will show how to do below. \n",
     "\n",
-    " <figure>\n",
-    "\t<a href=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/hyperspectral-general/histogram_equalization.png\">\n",
-    "\t<img src=\"https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/hyperspectral-general/histogram_equalization.png\"></a>\n",
-    "\t<figcaption> Histogram equalization is a method in image processing of contrast adjustment \n",
-    "using the image's histogram. Stretching the histogram can improve the contrast \n",
-    "of a displayed image, as we will show how to do below.\n",
-    "\tSource: <a href=\"https://en.wikipedia.org/wiki/Talk%3AHistogram_equalization#/media/File:Histogrammspreizung.png\"> Wikipedia - Public Domain </a>\n",
-    "\t</figcaption>\n",
-    "</figure>\n",
-    "\n",
-    "\n",
-    "*The following tutorial section is adapted from scikit-image's tutorial\n",
-    "<a href=\"http://scikit-image.org/docs/stable/auto_examples/color_exposure/plot_equalize.html#sphx-glr-auto-examples-color-exposure-plot-equalize-py\" target=\"_blank\"> Histogram Equalization</a>.*\n",
+    "The following code is adapted from scikit-image's tutorial\n",
+    "<a href=\"http://scikit-image.org/docs/stable/auto_examples/color_exposure/plot_equalize.html#sphx-glr-auto-examples-color-exposure-plot-equalize-py\" target=\"_blank\"> Histogram Equalization</a>.\n",
     "\n",
     "Below we demonstrate a widget to interactively explore different linear contrast stretches:"
    ]
