--- a/tutorials/R/AOP/Hyperspectral/Field-Spectra/explore_field_spectra.Rmd
+++ b/tutorials/R/AOP/Hyperspectral/Field-Spectra/explore_field_spectra.Rmd
@@ -6,7 +6,7 @@ dateCreated: 2024-02-12
 authors: Bridget Hass
 contributors: Claire Lunch
 estimatedTime: 1 - 1.5 Hours
-packagesLibraries: neonUtilities, geoNEON, terra, rhdf5, ggplot2, data.table, dplyr
+packagesLibraries: neonUtilities, geoNEON, neonOS, terra, rhdf5, ggplot2, dplyr
 topics: hyperspectral, foliar traits
 languagesTool: R
 dataProduct: DP1.30012.001, DP1.10026.001, DP3.30006.001
@@ -16,9 +16,9 @@ urlTitle: scale-spectra
 ---
 
 
-In this tutorial, we will go through a scaling exercise to link the <a href="https://data.neonscience.org/data-products/DP1.30012.001" target="_blank">field spectral reflectance</a> and airborne <a href="https://data.neonscience.org/data-products/DP3.30006.001" target="_blank">spectrometer orthorectified surface directional reflectance</a>. We will also tie in the <a href="https://data.neonscience.org/data-products/DP1.10026.001" target="_blank">plant foliar traits</a> data, which contains the geographic information associated with the field spectra data. 
+In this tutorial, we will go through a scaling exercise to link the <a href="https://data.neonscience.org/data-products/DP1.30012.001" target="_blank">field spectral reflectance</a> and airborne <a href="https://data.neonscience.org/data-products/DP3.30006.001" target="_blank">spectrometer orthorectified surface directional reflectance</a>. We will also tie in the <a href="https://data.neonscience.org/data-products/DP1.10026.001" target="_blank">plant foliar traits</a> data, which contains the geographic information and other metadata about the plants measured for associated with the field spectra data.
 
-Field spectral reflectance provide information about individual leaves or foliage, and samples such as these are often used as spectral end-members in classification applications. A collection of these spectral data can comprise a spectral library, eg. the <a href="https://www.usgs.gov/labs/spectroscopy-lab/science/spectral-library" target="_blank">USGS Spectral Library</a>. This NEON data product is collected on an opportunistic basis, typically in conjunction with NEON AOP overflights and in coordination with TOS Canopy Foliage Sampling. AOP typically collects spectra at 1-2 sites per year, so it is currently available at a subset of the NEON sites. The tutorial also demonstrates how to programmatically find which data are available.
+Field spectral reflectance provide information about individual leaves or foliage, and samples such as these are often used as spectral end-members in classification applications. A collection of these spectral data can comprise a spectral library, eg. the <a href="https://www.usgs.gov/labs/spectroscopy-lab/science/spectral-library" target="_blank">USGS Spectral Library</a>. This NEON data product is collected on an opportunistic basis, typically in conjunction with NEON Airborne Observation Platform (AOP) overflights and in coordination with TOS Canopy Foliage Sampling. AOP typically collects spectra at 1-2 sites per year, so it is currently available at a subset of the NEON sites. The tutorial also demonstrates how to programmatically determine which data are available.
 
 
 <div id="ds-objectives" markdown="1">
@@ -40,9 +40,9 @@ You will need the most current version of R and, preferably, `RStudio` loaded on
 ### Install R Packages
 
 * **neonUtilities:** `install.packages("neonUtilities")`
+* **neonOS:** `install.packages("neonOS")`
 * **geoNEON:** `install.packages("devtools")`, `devtools::install_github("NEONScience/NEON-geolocation/geoNEON")`
 * **ggplot2:** `install.packages("ggplot2")`
-* **data.table:** `install.packages("data.table")`
 * **dplyr:** `install.packages("dplyr")`
 * **rhdf5:** `install.packages("rhdf5")`
 * **terra:** `install.packages("terra")`
@@ -54,9 +54,9 @@ First, load the required libraries.
 
 ```{r import-libraries, results="hide"}
 library(neonUtilities)
+library(neonOS)
 library(geoNEON)
 library(ggplot2)
-library(data.table)
 library(dplyr)
 library(rhdf5)
 library(terra)
@@ -73,7 +73,7 @@ field_spectra_info$siteCodes$siteCode # list all available sites
 
 We can see that there are data available at 14 sites, as of the end of 2023.
 
-Now that we know what sites have this field spectral data, let's take a look at one of the sites as an example - <a href="https://www.neonscience.org/field-sites/rmnp" target="_blank">Rocky Mountain National Park (RMNP)</a> in Colorado. We'll use this site to demonstrate some exploratory analysis you might start with when working with the field spectral data. To load this data directly into R, you can use the `neonUtilities::loadByProduct` function, specifying the data product ID (dpID) and site. Since this product is collected fairly infrequently, to date there is only one collection per year of this for the subset of sites shown above, so specifying the year-month in addition to the site is not necessary. This data is not too large in volume, so it should be fine to set the option `check.size=FALSE`.
+Now that we know what sites have this field spectral data, let's take a look at one of the sites as an example - <a href="https://www.neonscience.org/field-sites/rmnp" target="_blank">Rocky Mountain National Park (RMNP)</a> in Colorado. We'll use this site to demonstrate some exploratory analysis you might start with when working with the field spectral data. To load this data directly into R, you can use the `neonUtilities::loadByProduct` function, specifying the data product ID (dpID) and site. Since this product is collected fairly infrequently, to date there is only one collection per year of this for the subset of sites shown above, so specifying the year-month in addition to the site is not necessary. This data is not too large in volume, so it should be fine to set the option `check.size=FALSE`. You will need to set package="expanded" in order to include the actual field spectral data.
 
 
 ```{r load-field-spectra, results="hide"}
@@ -83,211 +83,123 @@ field_spectra <- loadByProduct(dpID='DP1.30012.001',
                               check.size=FALSE)
 ```
 
-Let's take a look at all the associated data contained in this product, using the `names` function:
+Let's take a look at all the associated tables contained in this data product, using the `names` function:
 
 ```{r field-spectra-names}
 names(field_spectra)
 ```
-We encourage looking at all of these variables to learn more about the data product, but you can find the actual data stored in the variables: `fsp_boutMetadata` (contains metadata information about this sampling bout), `fsp_sampleMetadata` (contains relevant metadata about the individual samples), and `fsp_spectralData` (contains information about the individual sample data), and `per_sample` (contains the wavelength and reflectance data). Next, we can merge the data and metadata into a single table as follows. 
+We encourage looking at all of these tables to learn more about the data product, but you can find the actual data stored in the variables: `fsp_boutMetadata` (contains metadata information about this sampling bout), `fsp_sampleMetadata` (contains relevant metadata about the individual samples), `fsp_spectralData` (contains information about the individual sample data), and `per_sample` (contains the wavelength and reflectance data). Next, we can merge the `fsp_spectralData`, `fsp_sampleMetadata` and `per_sample` into a single data frame as follows. For more info on joining OS tables, please refer to https://www.neonscience.org/resources/learning-hub/tutorials/neonos-duplicates-joins.
+
+``` {r list2env, results="hide"}
+list2env(field_spectra, .GlobalEnv)
+```
 
 ```{r merge-data-metadata}
-spectra_merge <- merge(field_spectra$fsp_spectralData,field_spectra$fsp_sampleMetadata,by="spectralSampleID") 
+spectra_data_metadata <- joinTableNEON(fsp_spectralData,fsp_sampleMetadata)
+spectra_data <- merge(spectra_data_metadata,per_sample,by="spectralSampleID")
 ```
 
-You can use `View(spectra_merge)` to see the contents of this dataframe, or alternatively you could just print the variable name. The code below displays all the column names of this dataframe. We'll just show the head (or first 6 rows) of this data frame here, including a few of the columns.
+You can use `View(spectra_data)` to see the contents of this dataframe, or alternatively you could just print the variable name. The code below displays all the column names of this dataframe. We'll just show the head (or first 6 rows) of this data frame here, including a few of the columns.
 
-```{r spectra_merge-colnames}
-colnames(spectra_merge)
-head(spectra_merge[c("spectralSampleID","taxonID","scientificName","plantStatus")])
+```{r spectra_data-colnames}
+colnames(spectra_data)
+head(spectra_data[c("spectralSampleID","taxonID","reflectance","wavelength","reflectanceCondition")],1)
+```
+You'll need to cast the wavelength and reflectance data to "numeric" data type, using `as.numeric`in order to plot the data.
+
+``` {r set-wl-refl-to-numeric}
+spectra_data$wavelength <- as.numeric(spectra_data$wavelength)
+spectra_data$reflectance <- as.numeric(spectra_data$reflectance)
 ```
 
-The `per_sample` table is where the actual spectral measurements are stored. We can use the following code to extract the spectral data from the first sample in this data set.
-
-``` {r show-data-url}
-FSP_RMNP_20200706_2043 <- field_spectra$per_sample[which(field_spectra$per_sample$spectralSampleID=="FSP_RMNP_20200706_2043"),]
-```
-
-This data is mainly composed of 3 columns: `wavelength`, `reflectanceCondition`, and `reflectance`. What is the `reflectanceCondition`? Let's look at the unique values represented:
+The spectral data is mainly composed of 3 columns: `wavelength`, `reflectanceCondition`, and `reflectance`. What is the `reflectanceCondition`? Let's look at the unique values represented:
 
 ``` {r unique-refl-conditions}
-unique(FSP_RMNP_20200706_2043$reflectanceCondition)
+unique(spectra_data$reflectanceCondition)
 ```
 
 This `reflectanceCondition` describes what exactly is being measured. As stated in the Field spectral data Quick Start Guide on the NEON Data Portal <a href="https://data.neonscience.org/data-products/DP1.30012.001" target="_blank">Field spectral data (DP1.30012.001)</a> page, and explained in more detail in the <a href="https://data.neonscience.org/api/v0/documents/NEON_fieldSpectra_userGuide_vC?inline=true" target="_blank">NEON Field Spectra User Guide</a>:
 
 > "Spectral reflectance of both the front and back of the sample is measured against a reflective white spectralon reference panel. A black spectralon reference is then measured, followed by spectral transmittance measurements of the front and back of the sample. Reference measurements of the white reference are taken between each leaf measurement."
 
-When linking with NEON's airborne spectral dataset (DP3.30006.001), the `top of foliage (sunward) on black reference` is the condition that we want to use. For this lesson, we will just focus on this reflectance condition. Let's take a look at the spectra for the single csv we read in. Note that you'll need to cast the wavelength and reflectance data to "numeric" data type, using `as.numeric`.
-
-``` {r plot-reflectance-conditions, fig.align="center", fig.width = 12, fig.height = 4.5}
-refl_conditions_plot <- ggplot(FSP_RMNP_20200706_2043,             
-               aes(x = as.numeric(wavelength), 
-                   y = as.numeric(reflectance), 
-                   color = reflectanceCondition)) + geom_line() 
-print(refl_conditions_plot + ggtitle("FSP_RMNP_20200706_2043 - all reflectance conditions") + xlab("wavelength (nm)") + ylab("reflectance"))
+``` {r plot-first-fsp, fig.align="center", fig.width = 12, fig.height = 4.5}
+first_spectra_plot <- ggplot(subset(spectra_data, spectralSampleID == "FSP_RMNP_20200706_2043"), 
+                             aes(x =wavelength, y = reflectance,
+                                 color = reflectanceCondition)) + geom_line() 
+print(first_spectra_plot + ggtitle("FSP_RMNP_20200706_2043 spectra, all reflectance conditions"))
 ```
 
-And then subset just to the top of foliage on black reference, to plot the reflectance:
+When linking with NEON's airborne spectral dataset (DP3.30006.001), the `top of foliage (sunward) on black reference` is the condition that we want to use. For this lesson, we will just focus on this reflectance condition. Let's take a look at the spectra for the single csv we read in. 
 
-``` {r plot-single-spectra, fig.align="center", fig.width = 12, fig.height = 4.5}
-FSP_RMNP_20200706_2043_REFL <- FSP_RMNP_20200706_2043[FSP_RMNP_20200706_2043$reflectanceCondition == "top of foliage (sunward) on black reference", c("reflectance","wavelength")]
+To subset to plot only the top of foliage on black reference we can add 2nd condition:
 
-spectra_plot <- ggplot(FSP_RMNP_20200706_2043_REFL,
-                       aes(x = as.numeric(wavelength), 
-                           y = as.numeric(reflectance))) + geom_line() 
-print(spectra_plot + ggtitle("FSP_RMNP_20200706_2043_REFL - Top of Foliage on Black Reference") + xlab("wavelength (nm)") + ylab("reflectance"))
+``` {r plot-first-fsp-top-black, fig.align="center", fig.width = 12, fig.height = 4.5}
+first_spectra_plot <- ggplot(subset(spectra_data, spectralSampleID == "FSP_RMNP_20200706_2043" & reflectanceCondition == "top of foliage (sunward) on black reference"), aes(x =wavelength, y = reflectance, color = reflectanceCondition)) + geom_line() 
+print(first_spectra_plot + ggtitle("FSP_RMNP_20200706_2043 spectra, top of foliage on black reference"))
 ```
 
-So ... how can we read the spectral data in for all of the samples collected at RMNP? The code chunk below loops through all the spectral samples and creates a new data frame comprised of the taxonID + date of the fspID, and the reflectance values only of the top of the leaf on the black reference. 
+Next, let's plot the spectra of all the samples. First, let's extract only the reflectance condition we are interested in.
 
-``` {r create-refl-df}
-spectra_list <- list()
-for (i in 1:nrow(spectra_merge)) {
-  taxonID <- spectra_merge$taxonID[i] # get the taxonID
-  ssID <- spectra_merge$spectralSampleID[i] # get the spectralSampleID
-  # get the reflectance data for this spectralSampleID from per_sample
-  refl_data <- field_spectra$per_sample[which(field_spectra$per_sample$spectralSampleID==ssID),]
-  # filter to select only the `top on black` reflectanceCondition and keep the reflectance data only
-  refl <- as.numeric(refl_data[which(refl_data$reflectanceCondition == "top of foliage (sunward) on black reference"), c("reflectance")])
-  spectra_list[[i]] <- refl
-}
-# get the wavelength values corresponding to the subset we selected for each of the spectra
-wavelengths <- refl_data[which(refl_data$reflectanceCondition == "top of foliage (sunward) on black reference"), c("wavelength")]
-wavelengths <- as.numeric(wavelengths)
-spectra_df <- as.data.frame(do.call(cbind, spectra_list)) # make a new dataframe from the spectra_list
-# assign the taxonID + fspID to the column names to make unique column names
-taxonIDs <- paste0(spectra_merge$taxonID,substr(spectra_merge$spectralSampleID,9,22))
-colnames(spectra_df) <- taxonIDs
-# assign the wavelength values to a new column
-spectra_df$wavelength <- wavelengths
+``` {r extract-top-black}
+spectra_top_black <- spectra_data %>% dplyr::filter(reflectanceCondition == "top of foliage (sunward) on black reference")
 ```
 
-In order to plot the spectra for each `taxonID`, we need to rearrange the data frame so that it contains the data in 3 columns: `wavelength`, `variable`, and `value`. We can do this using `melt` as follows:
+``` {r plot-all-spectra, fig.align="center", fig.width = 12, fig.height = 4.5}
+ggplot(spectra_top_black, 
+       aes(x =wavelength, y = reflectance,
+           color = spectralSampleID)) + geom_line() 
+```
+Plot the spectra by taxon ID as follows:
 
-``` {r plot-taxon-spectra, fig.align="center", warning = FALSE, fig.width = 14, fig.height = 5}
-data_long <- melt(spectra_df, id = "wavelength",value.name="reflectance",variable.name="taxonID")
-all_spectra_plot <- ggplot(data_long,             
-               aes(x = wavelength, 
-                   y = reflectance, 
-                   color = taxonID)) + geom_line() 
-print(all_spectra_plot + ggtitle("Spectra of all Taxon IDs collected at RMNP"))
+``` {r plot-by-species, fig.align="center", fig.width = 12, fig.height = 4.5}
+ggplot(spectra_top_black, 
+       aes(x =wavelength, y = reflectance,
+           color = taxonID)) + geom_line(alpha = 0.5) 
 ```
 
-You'll note there are a number of spectra with `taxonID`s of PICOL, PIPOS, and POTR5. We can also plot the spectra grouped by `taxonID`.
-
-``` {r plot-taxon-spectra2, fig.align="center", fig.width = 12, fig.height = 4.5}
-spectra_df2 <- as.data.frame(do.call(cbind, spectra_list)) # make a new dataframe from the spectra_list
-# assign the taxonIDs to the column names
-taxonIDs <- spectra_merge$taxonID 
-colnames(spectra_df2) <- taxonIDs
-spectra_df2$wavelength <- wavelengths
-data_long2 <- melt(as.data.table(spectra_df2), id = "wavelength")
-all_spectra_plot <- ggplot(data_long2,             
-               aes(x = wavelength, 
-                   y = value, 
-                   color = variable)) + geom_line(alpha=0.5) 
-print(all_spectra_plot + ggtitle("Spectra of all Taxon IDs collected at RMNP"))
-```
-
-We can see there are 7 different species represented. We can get the count of each of the taxonIDs as follows.
+We can see there are 7 different species represented. We can get the count of each of the taxonIDs as follows. The `filter(wavelength == 350)` makes it so that we are not counting all 426 bands for each sample.
 
 ``` {r count-taxon}
-spectra_merge %>% count(taxonID, sort = TRUE)
+spectra_top_black %>% 
+  filter(wavelength == 350) %>% 
+  count(taxonID, sort = TRUE)
 ```
 
-Let's dig in a a little more into the `taxonID`s` which have multiple field spectra measurements. PICOL, PIPOS, and POTR5 each have 5 samples - these are the more common species at RMNP. Let's look at the spectra only from PICOL to start. For more details on this species, you can refer to the USDA <a href="https://plants.sc.egov.usda.gov/home/plantProfile?symbol=PICOL" target="_blank">PICOL</a> plant profile page - we can see here that the common name of this species is "Lodgepole Pine".
+Let's dig in a a little more into the `taxonID`s` which have multiple field spectra measurements. PICOL, PIPOS, and POTR5 each have 5 samples - these are the more common tree species at RMNP. Let's look at the spectra only from PICOL to start. For more details on this species, you can refer to the USDA <a href="https://plants.sc.egov.usda.gov/home/plantProfile?symbol=PICOL" target="_blank">PICOL</a> plant profile page - we can see here that the common name of this species is "Lodgepole Pine".
 
 ``` {r plot-picol-spectra, fig.align="center", fig.width = 12, fig.height = 4.5}
-spectra_data_table <- as.data.table(spectra_df)
-picol_data_table <- spectra_data_table[, grep("wavelength|PICOL", names(spectra_data_table)), with = FALSE]
-picol_data <- melt(picol_data_table, id = "wavelength",value.name = 'reflectance', variable.name = 'taxon_fsp_ID')
-picol_spectra_plot <- ggplot(picol_data,
-                            aes(x = wavelength, 
-                                y = reflectance, 
-                                color = taxon_fsp_ID)) + geom_line() 
+picol_spectra_plot <- ggplot(subset(spectra_top_black, taxonID == "PICOL"), 
+                             aes(x =wavelength, y = reflectance,
+                                 color = spectralSampleID)) + geom_line() 
 print(picol_spectra_plot + ggtitle("Spectra of PICOL samples collected at RMNP"))
 ```
-
 What do you notice about these spectra? It looks like there is some variation between some of the samples, particularly in the visible portion of the spectrum. Let's go back to the original `spectra_merge` dataframe to see if we can determine more information about these individual samples. The code below pulls out some relevant columns from the data frame which may explain some of the variation we're seeing.
 
 ``` {r view-picol-metadata}
-spectra_merge[which(spectra_merge$taxonID == "PICOL"), c("taxonID","spectralSampleID","plantStatus","leafStatus","leafAge","leafExposure","leafSamplePosition","targetType","targetStatus","measurementVenue","remarks.y")]
+spectra_top_black[which(spectra_top_black$taxonID == "PICOL" & spectra_top_black$wavelength == 350), c("taxonID","spectralSampleID","plantStatus","leafStatus","leafAge","leafExposure","leafSamplePosition","targetType","targetStatus","measurementVenue","remarks.y")]
 ```
 
-Here, we can see that all the plants have an "OK" status, and all the leaves have a "healthy" status, but we are still seeing some variation in the spectral signatures. This is expected, as there is uncertainty associated with any measurement, due to the properties of the leaf being sample, and the measurements themselves. Note that it appears the absolute values of reflectance vary quite a bit, but the relative reflectance differences, for example between the near infrared (NIR) and visible portions of the spectrum, may be fairly consistent. Let's test this qualitative observation by computing the NDVI (Normalized Difference Vegetation Index, a normalized ratio between the NIR and red portions of the spectrum) and comparing this index across all samples. 
+Here, we can see that all the plants have an "OK" status, and all the leaves have a "healthy" status, but the `leafExposure` and `leafSamplePosition` vary between the samples. This may cause some variation in the spectral signature. Some variation is expected, even if all conditions are identical, as there is uncertainty associated with any measurement, due to the properties of the leaf being sample, and the measurements themselves. 
 
-$$
-NDVI = \frac{NIR-RED}{NIR+RED}
-$$
-You can refer to this tutorial for how you would calculate NDVI from the aerial reflectance data: <a href="https://www.neonscience.org/resources/learning-hub/tutorials/create-raster-stack-hsi-hdf5-r#raster-math-creating-ndvi-and-other-vegetation-indices-in-r" target="_blank">Raster Math - Creating NDVI and Other Vegetation Indices in R</a>.
-
-
-``` {r ndvi-calculation}
-nir <- spectra_df[which.min(abs(750-spectra_df$wavelength)),]
-red <- spectra_df[which.min(abs(650-spectra_df$wavelength)),]
-ndvi = (nir - red) / (nir + red) 
-ndvi = ndvi[1:(length(ndvi)-1)]
-```
-
-Let's plot NDVI for all of the samples.
-
-``` {r ndvi-barplot, fig.align="right", fig.width = 12, fig.height = 5}
-pigl_ndvi <- select(ndvi,contains("PICOL"))
-barplot(unlist(pigl_ndvi), cex.names=1) 
-title(main = "PICOL NDVI", xlab = "sample", ylab = "NDVI")
-```
-We can also make a boxplot.
-
-``` {r ndvi-boxplot, fig.align="right", fig.width = 5, fig.height = 5}
-boxplot(unlist(pigl_ndvi), cex.names=1) 
-title(main = "PICOL NDVI Boxplot", xlab = "sample", ylab = "NDVI")
-```
-
-As we can see, the NDVI doesn't vary too much between the various samples. NDVI is a nice proxy for vegetation health, and could potentially be used in training models using this reflectance data, for example.
-
-Let's also plot the spectra of the other more common Rocky Mountain species: <a href="https://plants.sc.egov.usda.gov/home/plantProfile?symbol=PIPO" target="_blank">PIPOS (Ponderosa Pine)</a> and <a href="https://plants.sc.egov.usda.gov/home/plantProfile?symbol=POTR5" target="_blank">POTR5 (Quaking Aspen)</a>, to explore some of the typical variation you might see in the spectral signatures of a single species.
-
-First, start with PIPOS (Ponderosa Pine):
-
-``` {r plot-pipos-spectra, fig.align="center", fig.width = 12, fig.height = 4.5}
-spectra_data_table <- as.data.table(spectra_df)
-pipos_data_table <- spectra_data_table[, grep("wavelength|PIPOS", names(spectra_data_table)), with = FALSE]
-pipos_data <- melt(pipos_data_table, id = "wavelength",value.name = 'reflectance', variable.name = 'taxon_fsp_ID')
-pipos_spectra_plot <- ggplot(pipos_data,
-                            aes(x = wavelength, 
-                                y = reflectance, 
-                                color = taxon_fsp_ID)) + geom_line() 
-print(pipos_spectra_plot + ggtitle("Spectra of Ponderosa Pine (PIPOS) samples at RMNP"))
-```
-
-And then POTR5 (Quaking Aspen):
+Let's also plot the spectra of one of the other more common Rocky Mountain species: <a href="https://plants.sc.egov.usda.gov/home/plantProfile?symbol=POTR5" target="_blank">POTR5 (Quaking Aspen)</a>, to explore some of the typical variation you might see in the spectral signatures of a single species.
 
 ``` {r plot-potr5-spectra, fig.align="center", fig.width = 12, fig.height = 4.5}
-spectra_data_table <- as.data.table(spectra_df)
-potr5_data_table <- spectra_data_table[, grep("wavelength|POTR5", names(spectra_data_table)), with = FALSE]
-potr5_data <- melt(potr5_data_table, id = "wavelength",value.name = 'reflectance', variable.name = 'taxon_fsp_ID')
-potr5_spectra_plot <- ggplot(potr5_data,
-                            aes(x = wavelength, 
-                                y = reflectance, 
-                                color = taxon_fsp_ID)) + geom_line() 
-print(picol_spectra_plot + ggtitle("Spectra of Aspen (POTR5) samples @ RMNP"))
+potr5_spectra_plot <- ggplot(subset(spectra_top_black, taxonID == "POTR5"), 
+                             aes(x =wavelength, y = reflectance,
+                                 color = spectralSampleID)) + geom_line() 
+print(potr5_spectra_plot + ggtitle("Spectra of POTR5 samples collected at RMNP"))
 ```
 
-Finally, it may be helpful to plot the spectra of two species on the same plot. For this example, we'll show PICOL (Lodgepole Pine) and POTR5 (Quaking Aspen) together, including all 5 measurements of each.
+Finally, it may be useful to plot the spectra of two species on the same plot in order to compare the signatures. For this example, we'll show PICOL (Lodgepole Pine) and POTR5 (Quaking Aspen) together, including all 5 measurements of each.
 
 ``` {r plot-picol-potr5-spectra, fig.align="center", fig.width = 12, fig.height = 4.5}
-spectra_data_table2 <- as.data.table(spectra_df2)
-picol_potr5_data_table <- spectra_data_table2[, grep("wavelength|PICOL|POTR5", names(spectra_data_table2)), with = FALSE]
-
-picol_potr5_data <- melt(picol_potr5_data_table, id = "wavelength",value.name = 'reflectance', variable.name = 'taxonID')
-picol_potr5_spectra_plot <- ggplot(picol_potr5_data,
-                            aes(x = wavelength, 
-                                y = reflectance, 
-                                color = taxonID)) + geom_line(alpha=0.5) 
-print(picol_potr5_spectra_plot + ggtitle("Spectra of Lodgepole (PICOL) and Aspen (POTR5) samples @ RMNP"))
+potr5_picol_plot <- ggplot(subset(spectra_top_black, taxonID %in% c("POTR5","PICOL")), 
+                             aes(x =wavelength, y = reflectance,
+                                 color = taxonID)) + geom_line(alpha = 0.5) 
+print(potr5_picol_plot + ggtitle("Comparison PICOL (Lodgepole Pine) and POTR5 (Aspen) Leaf sample spectra at RMNP"))
 ```
 
-Here we can see that while there is considerable overlap in the visible portion of the electromagnetic spectrum, there are some distinct differences in the spectral signatures between these two species, particularly in the infrared regions.
+Here we can see that while there is considerable overlap in the visible portion of the electromagnetic spectrum, there are some distinct differences in the spectral signatures between these two species, particularly in the near to shortwave infrared regions.
 
 ## Foliar Trait Data
 
@@ -340,8 +252,8 @@ foliar_traits_loc <- merge(foliar_traits$cfc_fieldData,vst.loc,by="individualID"
 Finally, we can merge this `foliar_traits_loc` data frame with the `spectra_merge` data frame by the `sampleID` in order to link the field spectra samples with the geolocation information. Note that there is also a `crownPolygonID` column, which contains the id of the crown polygon shape file. We will hold off on using this crown polygon for now, but will start by using the adjusted geolocations calculated using `geoNEON` to obtain the corresponding airborne reflectance data.
 
 ``` {r spectra-traits}
-spectra_traits <- merge(spectra_merge,foliar_traits_loc,by="sampleID")
-head(spectra_traits[c("spectralSampleID","locationID.x","tagID","taxonID","stemDistance","stemAzimuth","adjEasting","adjNorthing")])
+spectra_traits <- merge(spectra_top_black,foliar_traits_loc,by="sampleID")
+head(spectra_traits[c("spectralSampleID","locationID","tagID","taxonID","stemDistance","stemAzimuth","adjEasting","adjNorthing")])
 ```
 
 Great, now we have the field spectra data and the corresponding locations of the leaf-clip samples. 
@@ -366,8 +278,8 @@ FSP_RMNP_PICOL <- spectra_traits[spectra_traits$spectralSampleID == "FSP_RMNP_20
 Check the `spectralSampleID` and `taxonID`:
 
 ``` {r show-spectral-taxon-ids}
-FSP_RMNP_PICOL$spectralSampleID
-FSP_RMNP_PICOL$taxonID
+FSP_RMNP_PICOL$spectralSampleID[1]
+FSP_RMNP_PICOL$taxonID[1]
 ```
 Download the reflectance data that encompasses this data point. Reflectance data can be quite large (~500-600+ MB per tile), so for this example, we'll only download the single tile needed. We'll leave the `check.size` field empty (default is TRUE), which means we will need to enter `y` in order to continue the download.
 
@@ -414,8 +326,8 @@ geth5metadata <- function(h5_file){
   ext <- ext(xMin,xMax,yMin,yMax) # define the extent (left, right, top, bottom)
 
   no_data <- as.integer(refl_attrs$Data_Ignore_Value)  # define the no data value
-  meta_list <- list("wavelengths" = wavelengths, "crs" = crs, "raster_ext" = ext, "no_data_value" = no_data)
-  h5closeAll() # cloes all open h5 instances
+  meta_list <- list("wavelengths" = wavelengths, "crs" = crs(paste0("epsg:",h5_epsg)), "raster_ext" = ext, "no_data_value" = no_data)
+  h5closeAll() # close all open h5 instances
   
   return(meta_list)
 }
@@ -506,8 +418,8 @@ Next we can extract the aerial reflectance spectra using the `terra::extract` fu
 
 ``` {r extract-air-refl-spectra, fig.align="center", fig.width = 12, fig.height = 4.5}
 refl_air <- extract(refl_rast, 
-                    cbind(FSP_RMNP_PICOL$adjEasting,
-                          FSP_RMNP_PICOL$adjNorthing))
+                    cbind(FSP_RMNP_PICOL$adjEasting[1],
+                          FSP_RMNP_PICOL$adjNorthing[1]))
 
 refl_air_df <- data.frame(t(refl_air))
 refl_air_df$wavelengths <- h5_meta$wavelengths
@@ -517,18 +429,6 @@ picol_air_plot <- ggplot(refl_air_df,
                          aes(x=wavelength, 
                              y=reflectance)) + geom_line() + ylim(0,2500)
 print(picol_air_plot + ggtitle("Airborne Reflectance Spectra of PICOL @ RMNP"))
-```
-
-Plot the leaf-clip spectra of this PICOL sample.
-
-``` {r plot-picol-spectra-leafclip, fig.align="center", fig.width = 12, fig.height = 4.5}
-spectra_data_table <- as.data.table(spectra_df)
-picol_data_table <- spectra_data_table[, grep("wavelength|PICOL_20200720_1304", names(spectra_data_table)), with = FALSE]
-picol_data <- melt(picol_data_table, id = "wavelength",value.name = 'reflectance', variable.name = 'taxon_fsp_ID')
-picol_leafclip_plot <- ggplot(picol_data,
-                             aes(x = wavelength, 
-                                 y = reflectance)) + geom_line() 
-print(picol_leafclip_plot + ggtitle("Leaf-Clip Spectra of PICOL FSP_RMNP_20200720_1304"))
 ```
 
 ## Plotting Leaf-Clip and Airborne Data Together
@@ -541,12 +441,9 @@ refl_air_df$scaled <- (refl_air_df$reflectance/as.vector(10000))
 
 spectra_plot <- ggplot() + 
   geom_line(data=refl_air_df, aes(x=wavelength, y=scaled), color='green', show.legend=TRUE) +
-  geom_line(data=picol_data, aes(x=wavelength, y=reflectance), color='darkgreen', show.legend=TRUE) +
-
-  labs(x="Wavelength (nm)",
-       y="Reflectance") +
-  theme(legend.position = c(2500, 0.3)) +
-  ylim(0, 0.5)
+  geom_line(data=FSP_RMNP_PICOL, aes(x =wavelength, y = reflectance), color = "darkgreen", show.legend=TRUE) +
+  labs(x="Wavelength (nm)",  y="Reflectance") +
+  theme(legend.position = c(2500, 0.3)) +  ylim(0, 0.6)
 
 print(spectra_plot + ggtitle("Spectra of PICOL Leaf Clip & Corresponding Airborne Pixel at RMNP"))
 ```
@@ -555,7 +452,7 @@ Why is there a difference between the leaf-clip spectra and the remotely-sensed 
 
 Each reflectance pixel represents a 1m x 1m area, so it contains an average spectra of all the vegetation and non-vegetation that are contained in that area. For example, a single pixel could contain the reflectance of a mix of leaves as well as branches, and any gaps in the tree canopy (eg. the ground under the tree). This averaging is called "spectral mixing" and you can perform "spectral un-mixing" to decompose an average spectra into it's component parts. These leaf clip spectra can be used as "end-members", in classification applications, for example. 
 
-Also, it is important to understand that there are uncertainties in the ASD measurements as well as the airborne spectra. There may be some geographic uncertainty associated with both the airborne data (which has 0.5 m horizontal resolution), as well as with the field sample geolocations. There is also some uncertainty in the spectral data itself. For example, there is uncertainty resulting from the atmospheric correction applied when generating the reflectance data from the at-sensor-radiance. Weather conditions during the flight are important to consider as well. The Airborne Observation Platform is typically able to collect the coincident overflights in clear weather, but this may not always be the case. For more on hyperspectral uncertainties and variation, please refer to the <a href="https://data.neonscience.org/api/v0/documents/NEON.DOC.004365vB?inline=true" target="_blank">Spectrometer Mosaic ATBD</a> (Algorithm Theoretical Basis Document).
+Also, it is important to understand that there are uncertainties in the ASD measurements as well as the airborne spectra. There may be some geographic uncertainty associated with both the airborne data (which has 0.5 m horizontal resolution), as well as with the field sample geolocations. There is also some uncertainty in the spectral data itself. For example, there is uncertainty resulting from the atmospheric correction applied when generating the reflectance data from the at-sensor-radiance. Weather conditions during the flight are important to consider as well. The Airborne Observation Platform attempts to collect the coincident overflights in clear weather, but this may not always be the case. For more on hyperspectral uncertainties and variation, please refer to the <a href="https://data.neonscience.org/api/v0/documents/NEON.DOC.004365vB?inline=true" target="_blank">Spectrometer Mosaic ATBD</a> (Algorithm Theoretical Basis Document).
 
 ### Next Steps
 
@@ -581,4 +478,3 @@ polygons <- loadByProduct(dpID='DP1.10026.001',
 
 </div>
 
-The foliar trait data is also a key data set for scaling - for example, a common ecological application would be to develop foliar trait models from the airborne reflectance data, using the in-situ foliar trait data to train the model, eg. <a href="https://nph.onlinelibrary.wiley.com/doi/full/10.1111/nph.16711" target="_blank">Foliar functional traits from imaging spectroscopy across biomes in eastern North America (Wang et al. 2020)</a>. NEON is currently developing foliar trait data products following this method. This is beyond the scope of this lesson, but the initial steps for conducting that sort of analysis using NEON data would be the same.
